# delivery-python

./: .env.example  README.md  alembic.ini  openapi_contract.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 07721d8b464e_initial_tables.py
proto/: basket_events.proto  geo.proto  order_events.proto
scripts/: generate_http.sh
src/: main.py
src/adapters/in_/http/: dependencies.py  main.py  models.py
src/core/application/commands/: assign_order_to_courier.py  complete_order.py  create_courier.py  create_order.py  move_courier.py
src/core/application/jobs/: assign_order_job.py
src/core/application/queries/: get_all_couriers.py  get_not_completed_orders.py
src/core/domain/: ports.py
src/core/domain/model/: address.py  order.py  (+4 more)
src/delivery/: main.py  settings.py
src/delivery/di/: __init__.py  container.py
src/delivery/libs/: __init__.py
src/di/: __init__.py  container.py
src/libs/: __init__.py
src/libs/ddd/: __init__.py  aggregate.py  aggregate_root.py  domain_event.py  domain_event_publisher.py
src/libs/errs/: __init__.py  error.py  exceptions.py  general_errors.py  guard.py  result.py  unit_result.py
templates/: main.jinja2  routers.jinja2
tests/: conftest.py  factories.py
tests/integration/: conftest.py  test_assign_order_command.py  test_complete_order_command.py  test_courier_repository.py  test_create_courier_command.py  test_create_order_command.py  test_get_all_couriers_query.py  test_get_not_completed_orders_query.py  test_move_courier_command.py  test_order_repository.py  test_unit_of_work.py
tests/unit/: test_libs.py
(+31 files in other folders)
