[project]
name = "delivery"
version = "1.0.0"
description = "Microservice for managing orders"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "that-depends>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.7.0",
    "aiokafka>=0.12.0",
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "protobuf>=5.29.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "testcontainers[postgresql]>=4.9.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "fastapi-code-generator>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/delivery"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N818"]

[tool.ruff.lint.per-file-ignores]
"src/delivery/adapters/out/grpc/*_pb2*.py" = ["ALL"]
"**/__init__.py" = ["F403"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"
files = ["src", "tests"]
